# pianola

./: CMakeLists.txt  README.md
CMake/: ConfigCompilerFlags.cmake
app/: CMakeLists.txt  main.cpp  measure_track_view.cpp  measure_track_view.h  piano_view.cpp  piano_view.h  resources_manager.cpp  resources_manager.h  track_view.cpp  track_view.h  view_preferences.cpp  view_preferences.h
app/assets/: bar.vert  note.frag
ext/: circe.cmake  hermes.cmake  libremidi.cmake
ext/pybind11/include/pybind11/: cast.h  eigen.h
ext/pybind11/include/pybind11/detail/: type_caster_base.h
ext/pybind11/pybind11/: setup_helpers.py
ext/pybind11/tests/extra_setuptools/: test_setuphelper.py
pianola/: midi_utils.h  note.cpp  note.h  song.cpp  song.h  time_track.cpp  time_track.h  track.cpp  track.h  utils.h
tests/: CMakeLists.txt  utils_tests.cpp
